modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- About -->
       <article id="about">
         <h2 class="major">關於我</h2>
-        <p>來自台灣<br>國中剛畢業<br>14y<br>170cm 50kg</p>
+        <p>來自台灣 國中剛畢業<br>14y<br>170cm 50kg</p>
         <p>(看看我都在Discord幹啥</p>
         <span class="image main"><img src="https://lanyard.cnrad.dev/api/851062442330816522" alt="" /></span>
       </article>
