modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Hans-亨</title>
   <link rel="stylesheet" href="./style.css">
-  <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
+  <div class="namecard">
+    <h2>Hans (亨)</h2>
+    <h3>學生&開發者</h3>
+    <div class="mail">ccoccc14@gmail.com</div>
+    <div class="igid">n.ahans._</div>
+    <div class="qr"></div>
+    <div class="circle circle1"></div>
+    <div class="circle circle2"></div>
+    <div class="circle circle3"></div>
+    <div class="circle circle4"></div>
+    <div class="circle circle5"></div>
+    <div class="circle circle6"></div>
 
+  </div>
 
+  <div class="copy">Hans</div>
+  <!-- partial -->
 
-<div class="namecard">
-  <h2>Hans (亨)</h2>
-<h3>學生&開發者</h3>
-  <div class="mail">ccoccc14@gmail.com</div>
-  <div class="igid">n.ahans._</div>
-  <div class="qr"></div>
-  <div class="circle circle1"></div>
-  <div class="circle circle2"></div>
-  <div class="circle circle3"></div>
-  <div class="circle circle4"></div>
-  <div class="circle circle5"></div>
-  <div class="circle circle6"></div>
-  
-</div>
-
-<div class="copy">Hans</div>
-<!-- partial -->
-  
 </body>
+
 </html>
