--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>學生&開發者</h3>
     <div class="mail">ccoccc14@gmail.com</div>
     <div class="igid">n.ahans._</div>
-    <div class="qr"></div>
+    <a href="https://linktr.ee/n.ahans._" target="_blank"><div class="qr"></div></a>
     <div class="circle circle1"></div>
     <div class="circle circle2"></div>
     <div class="circle circle3"></div>
