modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Hans (亨)</h2>
     <h3>學生&開發者</h3>
     <div class="mail">ccoccc14@gmail.com</div>
-    <div class="igid">n.ahans._</div>
+    <div class="igid">08.hans_</div>
     <a href="https://linktr.ee/n.ahans._" target="_blank"><div class="qr"></div></a>
     <div class="circle circle1"></div>
     <div class="circle circle2"></div>
