new file:   avatar.gif 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Hans-亨</title>
+  <meta name="description" content="嗨嗨!!我是一位台灣的高中生.w.">
+  <meta property="og:title" content="Hans-亨" />
+  <meta property="og:image" content="./avatar.gif" />
+  <meta property="og:description" content="嗨嗨!!我是一位台灣的高中生.w." />
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -14,7 +18,9 @@
     <h3>學生&開發者</h3>
     <div class="mail">ccoccc14@gmail.com</div>
     <div class="igid">08.hans_</div>
-    <a href="https://linktr.ee/n.ahans._" target="_blank"><div class="qr"></div></a>
+    <a href="https://linktr.ee/08.hans_" target="_blank">
+      <div class="qr"></div>
+    </a>
     <div class="circle circle1"></div>
     <div class="circle circle2"></div>
     <div class="circle circle3"></div>
