--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <meta property="og:description" content="嗨嗨!!我是一位台灣的高中生.w." />
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DR4VR4K20V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DR4VR4K20V');
+</script>
+<!--下雪
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="text/javascript">
 (function($){
@@ -55,6 +64,8 @@ $(function(){
     });
 });
   </script>
+	-->
+	
 </head>
 
 <body>
