--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(function(){
   <div class="namecard">
     <h2>Hans (亨)</h2>
     <h3>學生&開發者</h3>
-    <div class="mail"><a href="mailto:hi@hans0805.me">hi@hans0805.me</a>a</div>
+    <div class="mail"><a style="color:#606060" href="mailto:hi@hans0805.me">hi@hans0805.me</a></div>
     <div class="igid">08.hans_</div>
     <a href="https://linktr.ee/08.hans_" target="_blank">
       <div class="qr"></div>
