--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:description" content="嗨嗨!!我是一位台灣的高中生.w." />
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <script defer src="https://view.hans0805.me/script.js" data-website-id="24f16021-e261-496d-9cca-37b70c80641a"></script>
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR4VR4K20V"></script>
   <script>
