--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,7 @@
             max-width: 600px;
             margin: 20px;
             background-color: white;
-            border-radius: 10px;
+            border-radius: 25px;
             overflow: hidden;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -35,16 +35,21 @@
         .cover-photo {
             height: 180px;
             background-color: #e0e0e0;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            background-image: url("https://cdn.discordapp.com/banners/851062442330816522/606dcc084252e7cfb7fef6ddad359d9d.png?size=1024");
             position: relative;
         }
 
         .profile-photo {
             width: 120px;
             height: 120px;
-            border-radius: 60%;
+            border-radius: 100px;
             background-image: url("https://hans0805.me/img/avatar.jpg");
             background-repeat: no-repeat;
             background-position: center;
+            background-size: cover;
             position: absolute;
             bottom: -70px;
             left: 30px;
@@ -318,7 +323,7 @@
                         hi@hans0805.me
                     </div>
                 </a>
-                <a href="https://github.con/hanshans135" target="_blank">
+                <a href="https://github.com/hanshans135" target="_blank">
                     <div class="link-item">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                             stroke-linecap="round" stroke-linejoin="round">
