--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             height: 100%;
             font-family: Arial, sans-serif;
-            background-color: #676767;
+            background-color: #424549;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -30,6 +30,7 @@
             border-radius: 25px;
             overflow: hidden;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
         }
 
         .cover-photo {
@@ -78,7 +79,7 @@
         }
 
         .profile-info {
-            padding: 80px 40px 20px
+            padding: 10px 50px 20px
                 /*background: linear-gradient(rgb(196, 100, 3), rgb(0, 0, 0));*/
         }
 
@@ -242,7 +243,103 @@
                 font-size: 12px;
             }
         }
+
+        .carousel {
+            position: relative;
+            overflow: hidden;
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .carousel-inner {
+            display: flex;
+            transition: transform 0.5s ease;
+        }
+
+        .carousel-item {
+            flex: 0 0 100%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+        }
+
+        .experience-block {
+            width: 48%;
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .experience-block img {
+            width: 100%;
+            /*height: 60%;
+             padding-bottom: 100%;
+            使图片变为正方形 */
+            object-fit: cover;
+            display: block;
+        }
+
+        .experience-text {
+            padding: 15px;
+        }
+
+        .experience-text h2 {
+            font-size: 16px;
+            margin-bottom: 5px;
+        }
+
+        .experience-text p {
+            font-size: 14px;
+            margin: 0;
+        }
+
+        .carousel-control {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 10px 15px;
+            text-decoration: none;
+            border-radius: 50%;
+            font-size: 18px;
+            z-index: 10;
+        }
+
+        .carousel-control.prev {
+            left: 10px;
+        }
+
+        .carousel-control.next {
+            right: 10px;
+        }
+
+        .carousel-indicators {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+            z-index: 10;
+        }
+
+        .indicator {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: rgba(0, 0, 0, 0.5);
+            cursor: pointer;
+        }
+
+        .indicator.active {
+            background-color: #000;
+        }
     </style>
+
 </head>
 
 <body>
@@ -268,39 +365,8 @@
             <div id="page-home" style="display: block;">
                 <div class="about-me">
                     <h3>關於我</h3>
-                    <!--
-                <p>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
-                        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
-                    </svg>
-                    我的新機器人 https://bot.hans0805.me/
-                </p>
-                <p>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-                        <line x1="8" y1="21" x2="16" y2="21"></line>
-                        <line x1="12" y1="17" x2="12" y2="21"></line>
-                    </svg>
-                    喵樂型開發者
-                </p>
-                <p>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="10"></circle>
-                        <line x1="12" y1="16" x2="12" y2="12"></line>
-                        <line x1="12" y1="8" x2="12.01" y2="8"></line>
-                    </svg>
-                    關於我 https://go-to.lol/hans
-                </p>
-                <p>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                        <polyline points="22,6 12,13 2,6"></polyline>
-                    </svg>
-                    hi@hans0805.me
-                </p>
-                -->
-                    <p>something here</p>
+                    <p>我叫洪碩亨，是一名資訊科高職生，擅長編寫Python程式，並熱衷於運動，特別是排球。我擁有開發Line機器人和Discord機器人的經驗，並且能夠製作各種網站。在學習和運動中，我不斷挑戰自己，提升技能，希望未來能在資訊科技領域有所突破。我的目標是結合興趣與專業，創造出更多有價值的應用程式和平台，然後賺很多的錢。
+                    </p>
                 </div>
                 <div class="join-date">
                     成為地球人時間: 2008年8月5日
@@ -311,9 +377,46 @@
             <div id="page-info" style="display: none;">
                 <div class="about-me">
                     <h3>經歷</h3>
-                    <p>something here</p>
+                    <div class="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item">
+                                <div class="experience-block">
+                                    <img src="https://yt3.googleusercontent.com/ytc/AIdro_l-4eHLOxc9YmVaAxYHBSkE6IatT5w8GYWd6YPL2Nl4oTQ=s900-c-k-c0x00ffffff-no-rj" alt="2018年 - 國中學習歷程">
+                                    <div class="experience-text">
+                                        <h2>2024 - SITCON</h2>
+                                        <p>場務</p>
+                                    </div>
+                                </div>
+                                <div class="experience-block">
+                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="2021年 - 高中資訊科學習">
+                                    <div class="experience-text">
+                                        <h2>2024 - COSCUP</h2>
+                                        <p>會眾</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="experience-block">
+                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="2023年 - 個人項目開發">
+                                    <div class="experience-text">
+                                        <h2>2023 - COSCUP</h2>
+                                        <p>會眾</p>
+                                    </div>
+                                </div>
+                                <div class="experience-block">
+                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="未來展望">
+                                    <div class="experience-text">
+                                        <h2>awa</h2>
+                                        <p>test</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#" class="carousel-control prev">&lt;</a>
+                        <a href="#" class="carousel-control next">&gt;</a>
+                        <div class="carousel-indicators"></div>
+                    </div>
                 </div>
-
             </div>
 
             <!--專案-->
@@ -398,7 +501,51 @@
                 project_page.style.display = "block"
             }
         }
+
+        // 更新后的轮播功能
+        document.addEventListener('DOMContentLoaded', function () {
+            const carousel = document.querySelector('.carousel-inner');
+            const items = document.querySelectorAll('.carousel-item');
+            const prevButton = document.querySelector('.carousel-control.prev');
+            const nextButton = document.querySelector('.carousel-control.next');
+            const indicatorsContainer = document.querySelector('.carousel-indicators');
+            let currentIndex = 0;
+
+            // 创建指示器
+            items.forEach((_, index) => {
+                const indicator = document.createElement('div');
+                indicator.classList.add('indicator');
+                if (index === 0) indicator.classList.add('active');
+                indicator.addEventListener('click', () => showItem(index));
+                indicatorsContainer.appendChild(indicator);
+            });
+
+            const indicators = document.querySelectorAll('.indicator');
+
+            function showItem(index) {
+                carousel.style.transform = `translateX(-${index * 100}%)`;
+                indicators[currentIndex].classList.remove('active');
+                indicators[index].classList.add('active');
+                currentIndex = index;
+            }
+
+            prevButton.addEventListener('click', function (e) {
+                e.preventDefault();
+                let index = currentIndex - 1;
+                if (index < 0) index = items.length - 1;
+                showItem(index);
+            });
+
+            nextButton.addEventListener('click', function (e) {
+                e.preventDefault();
+                let index = currentIndex + 1;
+                if (index >= items.length) index = 0;
+                showItem(index);
+            });
+
+        });
     </script>
+
 </body>
 
 </html>
