--- a/test/index.html
+++ b/test/index.html
@@ -244,11 +244,13 @@
             }
         }
 
+        
         .carousel {
             position: relative;
             overflow: hidden;
             border-radius: 10px;
             width: 100%;
+            margin-bottom: 20px;
         }
 
         .carousel-inner {
@@ -261,23 +263,23 @@
             flex: 0 0 100%;
             width: 100%;
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             padding: 10px;
         }
 
         .experience-block {
-            width: 48%;
+            width: calc(50% - 10px);
             background-color: #f8f9fa;
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
 
         .experience-block img {
             width: 100%;
-            /*height: 60%;
-             padding-bottom: 100%;
-            使图片变为正方形 */
+            aspect-ratio: 1 / 1;
             object-fit: cover;
             display: block;
         }
@@ -307,6 +309,11 @@
             border-radius: 50%;
             font-size: 18px;
             z-index: 10;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 10px;
+            height: 20px;
         }
 
         .carousel-control.prev {
@@ -337,6 +344,50 @@
 
         .indicator.active {
             background-color: #000;
+        }
+
+        /* 響應式設計 */
+        @media (max-width: 768px) {
+            .experience-block {
+                width: calc(50% - 5px);  /* 調整寬度以適應較小的間距 */
+            }
+
+            .carousel-item {
+                padding: 5px;  /* 減小內邊距以適應較小的屏幕 */
+            }
+
+            .experience-text {
+                padding: 10px;  /* 減小文字區域的內邊距 */
+            }
+
+            .experience-text h2 {
+                font-size: 14px;  /* 減小標題字體大小 */
+            }
+
+            .experience-text p {
+                font-size: 12px;  /* 減小段落字體大小 */
+            }
+
+            .carousel-control {
+                width: 30px;  /* 減小按鈕尺寸 */
+                height: 30px;
+                font-size: 14px;  /* 減小箭頭大小 */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .experience-block {
+                margin-bottom: 10px;  /* 進一步減小底部間距 */
+            }
+
+            .carousel-inner {
+                width: 97%;
+            }
+            .carousel-control {
+                width: 5px;  /* 進一步減小按鈕尺寸 */
+                height: 15px;
+                font-size: 12px;  /* 進一步減小箭頭大小 */
+            }
         }
     </style>
 
