--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>亨 - 關於我 </title>
+    <title>Hans - 亨</title>
+    <meta name="description" content="來自台灣的高中生，擅長與後端打交道">
+    <meta property="og:title" content="Hans - 亨" />
+    <meta property="og:image" content="./avatar.gif" />
+    <meta property="og:description" content="來自台灣的高中生，擅長與後端打交道" />
     <style>
         body,
         html {
@@ -35,6 +39,7 @@
 
         .cover-photo {
             height: 180px;
+            background-image: url("cover.jpg");
             background-color: #e0e0e0;
             background-repeat: no-repeat;
             background-position: center;
@@ -244,7 +249,7 @@
             }
         }
 
-        
+
         .carousel {
             position: relative;
             overflow: hidden;
@@ -349,44 +354,55 @@
         /* 響應式設計 */
         @media (max-width: 768px) {
             .experience-block {
-                width: calc(50% - 5px);  /* 調整寬度以適應較小的間距 */
+                width: calc(50% - 5px);
+                /* 調整寬度以適應較小的間距 */
             }
 
             .carousel-item {
-                padding: 5px;  /* 減小內邊距以適應較小的屏幕 */
+                padding: 5px;
+                /* 減小內邊距以適應較小的屏幕 */
             }
 
             .experience-text {
-                padding: 10px;  /* 減小文字區域的內邊距 */
+                padding: 10px;
+                /* 減小文字區域的內邊距 */
             }
 
             .experience-text h2 {
-                font-size: 14px;  /* 減小標題字體大小 */
+                font-size: 14px;
+                /* 減小標題字體大小 */
             }
 
             .experience-text p {
-                font-size: 12px;  /* 減小段落字體大小 */
+                font-size: 12px;
+                /* 減小段落字體大小 */
             }
 
             .carousel-control {
-                width: 30px;  /* 減小按鈕尺寸 */
+                width: 30px;
+                /* 減小按鈕尺寸 */
                 height: 30px;
-                font-size: 14px;  /* 減小箭頭大小 */
+                font-size: 14px;
+                /* 減小箭頭大小 */
             }
         }
 
         @media (max-width: 480px) {
             .experience-block {
-                margin-bottom: 10px;  /* 進一步減小底部間距 */
+                margin-bottom: 10px;
+                /* 進一步減小底部間距 */
             }
 
             .carousel-inner {
                 width: 97%;
             }
+
             .carousel-control {
-                width: 5px;  /* 進一步減小按鈕尺寸 */
+                width: 5px;
+                /* 進一步減小按鈕尺寸 */
                 height: 15px;
-                font-size: 12px;  /* 進一步減小箭頭大小 */
+                font-size: 12px;
+                /* 進一步減小箭頭大小 */
             }
         }
     </style>
@@ -409,7 +425,7 @@
         </div>
         <div class="profile-info">
 
-            <div class="profile-name">洪碩亨</div>
+            <div class="profile-name" onclick="show_name(this)">Hans (亨)</div>
             <div class="profile-username">08.hans_</div>
 
             <!--首頁-->
@@ -448,33 +464,11 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="experience-block">
-                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="2023年 - 個人項目開發">
+                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400"
+                                        alt="2023 - COSCUP">
                                     <div class="experience-text">
                                         <h2>2023 - COSCUP</h2>
                                         <p>會眾</p>
-                                    </div>
-                                </div>
-                                <div class="experience-block">
-                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="未來展望">
-                                    <div class="experience-text">
-                                        <h2>awa</h2>
-                                        <p>test</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="experience-block">
-                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="2023年 - 個人項目開發">
-                                    <div class="experience-text">
-                                        <h2>2023 - COSCUP</h2>
-                                        <p>會眾</p>
-                                    </div>
-                                </div>
-                                <div class="experience-block">
-                                    <img src="https://www.claudeusercontent.com/api/placeholder/400/400" alt="未來展望">
-                                    <div class="experience-text">
-                                        <h2>awa</h2>
-                                        <p>test</p>
                                     </div>
                                 </div>
                             </div>
@@ -490,7 +484,72 @@
             <div id="project-info" style="display: none;">
                 <div class="about-me">
                     <h3>專案</h3>
-                    <p>something here</p>
+                    <div>
+                        <a href="https://th.hans0805.me" target="_blank">
+                            <div class="link-item">
+                                <svg xmlns="http://www.w3.org/2000/svg" aria-label="Threads" viewBox="0 0 192 192">
+                                    <script xmlns="" />
+                                    <path class="x19hqcy"
+                                        d="M141.537 88.9883C140.71 88.5919 139.87 88.2104 139.019 87.8451C137.537 60.5382 122.616 44.905 97.5619 44.745C97.4484 44.7443 97.3355 44.7443 97.222 44.7443C82.2364 44.7443 69.7731 51.1409 62.102 62.7807L75.881 72.2328C81.6116 63.5383 90.6052 61.6848 97.2286 61.6848C97.3051 61.6848 97.3819 61.6848 97.4576 61.6855C105.707 61.7381 111.932 64.1366 115.961 68.814C118.893 72.2193 120.854 76.925 121.825 82.8638C114.511 81.6207 106.601 81.2385 98.145 81.7233C74.3247 83.0954 59.0111 96.9879 60.0396 116.292C60.5615 126.084 65.4397 134.508 73.775 140.011C80.8224 144.663 89.899 146.938 99.3323 146.423C111.79 145.74 121.563 140.987 128.381 132.296C133.559 125.696 136.834 117.143 138.28 106.366C144.217 109.949 148.617 114.664 151.047 120.332C155.179 129.967 155.42 145.8 142.501 158.708C131.182 170.016 117.576 174.908 97.0135 175.059C74.2042 174.89 56.9538 167.575 45.7381 153.317C35.2355 139.966 29.8077 120.682 29.6052 96C29.8077 71.3178 35.2355 52.0336 45.7381 38.6827C56.9538 24.4249 74.2039 17.11 97.0132 16.9405C119.988 17.1113 137.539 24.4614 149.184 38.788C154.894 45.8136 159.199 54.6488 162.037 64.9503L178.184 60.6422C174.744 47.9622 169.331 37.0357 161.965 27.974C147.036 9.60668 125.202 0.195148 97.0695 0H96.9569C68.8816 0.19447 47.2921 9.6418 32.7883 28.0793C19.8819 44.4864 13.2244 67.3157 13.0007 95.9325L13 96L13.0007 96.0675C13.2244 124.684 19.8819 147.514 32.7883 163.921C47.2921 182.358 68.8816 191.806 96.9569 192H97.0695C122.03 191.827 139.624 185.292 154.118 170.811C173.081 151.866 172.51 128.119 166.26 113.541C161.776 103.087 153.227 94.5962 141.537 88.9883ZM98.4405 129.507C88.0005 130.095 77.1544 125.409 76.6196 115.372C76.2232 107.93 81.9158 99.626 99.0812 98.6368C101.047 98.5234 102.976 98.468 104.871 98.468C111.106 98.468 116.939 99.0737 122.242 100.233C120.264 124.935 108.662 128.946 98.4405 129.507Z" />
+                                </svg>
+                                Threads AI 貼文分析
+                            </div>
+                        </a>
+                        <br>
+                        <a href="https://no-share.go-to.lol" target="_blank">
+                            <div class="link-item">
+                                <svg fill="#000000" height="200px" width="200px" version="1.1" id="Capa_1"
+                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                    viewBox="0 0 54.971 54.971" xml:space="preserve">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <g>
+                                            <path
+                                                d="M51.173,3.801c-5.068-5.068-13.315-5.066-18.384,0l-9.192,9.192c-0.781,0.781-0.781,2.047,0,2.828 c0.781,0.781,2.047,0.781,2.828,0l9.192-9.192c1.691-1.69,3.951-2.622,6.363-2.622c2.413,0,4.673,0.932,6.364,2.623 s2.623,3.951,2.623,6.364c0,2.412-0.932,4.672-2.623,6.363L36.325,31.379c-3.51,3.508-9.219,3.508-12.729,0 c-0.781-0.781-2.047-0.781-2.828,0s-0.781,2.048,0,2.828c2.534,2.534,5.863,3.801,9.192,3.801s6.658-1.267,9.192-3.801 l12.021-12.021c2.447-2.446,3.795-5.711,3.795-9.192C54.968,9.512,53.62,6.248,51.173,3.801z">
+                                            </path>
+                                            <path
+                                                d="M27.132,40.57l-7.778,7.778c-1.691,1.691-3.951,2.623-6.364,2.623c-2.412,0-4.673-0.932-6.364-2.623 c-3.509-3.509-3.509-9.219,0-12.728L17.94,24.306c1.691-1.69,3.951-2.622,6.364-2.622c2.412,0,4.672,0.932,6.363,2.622 c0.781,0.781,2.047,0.781,2.828,0s0.781-2.047,0-2.828c-5.067-5.067-13.314-5.068-18.384,0L3.797,32.793 c-2.446,2.446-3.794,5.711-3.794,9.192c0,3.48,1.348,6.745,3.795,9.191c2.446,2.447,5.711,3.795,9.191,3.795 c3.481,0,6.746-1.348,9.192-3.795l7.778-7.778c0.781-0.781,0.781-2.047,0-2.828S27.913,39.789,27.132,40.57z">
+                                            </path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                No Share - 縮短分享連結
+                            </div>
+                        </a>
+                        <br>
+                        <a href="https://maybeisfree.host" target="_blank">
+                            <div class="link-item">
+                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <path
+                                            d="M6 6H6.01M6 18H6.01M5.2 10H18.8C19.9201 10 20.4802 10 20.908 9.78201C21.2843 9.59027 21.5903 9.28431 21.782 8.90798C22 8.48016 22 7.92011 22 6.8V5.2C22 4.0799 22 3.51984 21.782 3.09202C21.5903 2.71569 21.2843 2.40973 20.908 2.21799C20.4802 2 19.9201 2 18.8 2H5.2C4.07989 2 3.51984 2 3.09202 2.21799C2.71569 2.40973 2.40973 2.71569 2.21799 3.09202C2 3.51984 2 4.07989 2 5.2V6.8C2 7.92011 2 8.48016 2.21799 8.90798C2.40973 9.28431 2.71569 9.59027 3.09202 9.78201C3.51984 10 4.0799 10 5.2 10ZM5.2 22H18.8C19.9201 22 20.4802 22 20.908 21.782C21.2843 21.5903 21.5903 21.2843 21.782 20.908C22 20.4802 22 19.9201 22 18.8V17.2C22 16.0799 22 15.5198 21.782 15.092C21.5903 14.7157 21.2843 14.4097 20.908 14.218C20.4802 14 19.9201 14 18.8 14H5.2C4.07989 14 3.51984 14 3.09202 14.218C2.71569 14.4097 2.40973 14.7157 2.21799 15.092C2 15.5198 2 16.0799 2 17.2V18.8C2 19.9201 2 20.4802 2.21799 20.908C2.40973 21.2843 2.71569 21.5903 3.09202 21.782C3.51984 22 4.0799 22 5.2 22Z"
+                                            stroke="#000000" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                    </g>
+                                </svg>
+                                Maybe Is Free - 免費託管
+                            </div>
+                        </a>
+                        <br>
+                        <a href="https://discord.com/application-directory/1126517167966396436" target="_blank">
+                            <div class="link-item">
+                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <path
+                                            d="M6 6H6.01M6 18H6.01M5.2 10H18.8C19.9201 10 20.4802 10 20.908 9.78201C21.2843 9.59027 21.5903 9.28431 21.782 8.90798C22 8.48016 22 7.92011 22 6.8V5.2C22 4.0799 22 3.51984 21.782 3.09202C21.5903 2.71569 21.2843 2.40973 20.908 2.21799C20.4802 2 19.9201 2 18.8 2H5.2C4.07989 2 3.51984 2 3.09202 2.21799C2.71569 2.40973 2.40973 2.71569 2.21799 3.09202C2 3.51984 2 4.07989 2 5.2V6.8C2 7.92011 2 8.48016 2.21799 8.90798C2.40973 9.28431 2.71569 9.59027 3.09202 9.78201C3.51984 10 4.0799 10 5.2 10ZM5.2 22H18.8C19.9201 22 20.4802 22 20.908 21.782C21.2843 21.5903 21.5903 21.2843 21.782 20.908C22 20.4802 22 19.9201 22 18.8V17.2C22 16.0799 22 15.5198 21.782 15.092C21.5903 14.7157 21.2843 14.4097 20.908 14.218C20.4802 14 19.9201 14 18.8 14H5.2C4.07989 14 3.51984 14 3.09202 14.218C2.71569 14.4097 2.40973 14.7157 2.21799 15.092C2 15.5198 2 16.0799 2 17.2V18.8C2 19.9201 2 20.4802 2.21799 20.908C2.40973 21.2843 2.71569 21.5903 3.09202 21.782C3.51984 22 4.0799 22 5.2 22Z"
+                                            stroke="#000000" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                    </g>
+                                </svg>
+                                注音輸入法翻譯
+                            </div>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -510,7 +569,7 @@
                                 </rect>
                             </g>
                         </svg>
-                        hi@hans0805.me
+                        Email
                     </div>
                 </a>
                 <a href="https://github.com/hanshans135" target="_blank">
@@ -535,6 +594,20 @@
                         Instagram
                     </div>
                 </a>
+                <a href="https://t.me/hans0805" target="_blank">
+                    <div class="link-item">
+                        <svg viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg" fill="none">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path stroke="currentColor" stroke-width="12"
+                                    d="M23.073 88.132s65.458-26.782 88.16-36.212c8.702-3.772 38.215-15.843 38.215-15.843s13.621-5.28 12.486 7.544c-.379 5.281-3.406 23.764-6.433 43.756-4.54 28.291-9.459 59.221-9.459 59.221s-.756 8.676-7.188 10.185c-6.433 1.509-17.027-5.281-18.919-6.79-1.513-1.132-28.377-18.106-38.214-26.404-2.649-2.263-5.676-6.79.378-12.071 13.621-12.447 29.891-27.913 39.728-37.72 4.54-4.527 9.081-15.089-9.837-2.264-26.864 18.483-53.35 35.835-53.35 35.835s-6.053 3.772-17.404.377c-11.351-3.395-24.594-7.921-24.594-7.921s-9.08-5.659 6.433-11.693Z">
+                                </path>
+                            </g>
+                        </svg>
+                        Telegram
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -554,6 +627,10 @@
             } else {
                 project_page.style.display = "block"
             }
+        }
+
+        function show_name(t){
+            t.textContent="Hans (洪碩亨)"
         }
 
         // 更新后的轮播功能
