--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ $(function(){
     <div class="mail"><a style="color:#606060" href="mailto:hi@hans0805.me">hi@hans0805.me</a></div>
     <div class="igid"><a style="color:#606060" href="https://www.instagram.com/08.hans_" target="_blank">08.hans_</a></div>
     <div class="github"><a style="color:#606060" href="https://github.com/HansHans135" target="_blank">HansHans135</a></div>
-    <div class="info" onclick="info_me()"><a href="#" style="color:#606060">不怎麼正經的簡介</a></div>
+    <div class="info"><a href="/test" style="color:#606060">測試中的簡介</a></div>
     <a href="https://linktr.ee/08.hans_" target="_blank">
       <div class="qr"></div>
     </a>
